Fix vercel deployment

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://your-backend.vercel.app/api
+REACT_APP_API_URL=https://vercel.com/garv-gargs-projects/my-kitchen-buddy/CeiqV1PdQyqddGeqdyG7eL3cU8Ge
 REACT_APP_NODE_ENV=production
