--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,18 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "app.js"
+      "dest": "/server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "app.js"
+      "dest": "/server.js"
     }
   ],
   "env": {
