--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
-  "functions": {
-    "server.js": {
-      "maxDuration": 30,
-      "memory": 1024
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
