--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://my-kitchen-buddy.vercel.app/
+REACT_APP_API_BASE_URL=https://my-kitchen-buddy.vercel.app/api
 REACT_APP_NODE_ENV=production
